once I got going I found I just cannot stop... more changes... re commented out pull left rule, added some semantic and content to create cleare section divisions on the index page. Currently no site nav, all sections are visible, only some data is off site and safe...

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,8 +1,8 @@
 /*Universal Rules*/
 
-.pull-left {
+/*.pull-left {
   float: left;
-}
+}*/
 
 .pull-right {
   float: right;
